--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "noFallthroughCasesInSwitch": true
   },
 
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.d.ts"],
+  "include": ["src/**/*.tsx", "src/**/*.ts"],
 
   "references": [{ "path": "./tsconfig.node.json" }]
 }
