--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "types": "tsc"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
@@ -15,7 +16,6 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
-    "react-youtube": "^10.1.0",
     "sass": "^1.69.5"
   },
   "devDependencies": {
@@ -29,12 +29,8 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "vite": "^4.4.5"
+
   }
 }
